# Lib.StereoCamera

./: .gitignore  CMakeLists.txt
config/: config.json  default.json  parameters.json
docs/: API_module.md  GUI_module.md  commands.md  data_module.md  development_rule.md  server.md
docs_backup_jun8/: AGENTS.md  architecture_blueprint.txt  data.md  design.md  parameter.md
include/stereo_camera/api/: AdminServer.h  CameraSDKClient.h  ClientHandler.h
include/stereo_camera/calibration/: Calibration2D.h  Calibration3D.h
include/stereo_camera/common/: Logger.h  Parameter.h  Response.h  Types.h
include/stereo_camera/data/: ConfigManager.h  DataBuffer.h  DataPipeline.h  DataPublisher.h  DataStorage.h  LoopbackSubscriber.h  SDKSlotManager.h  SPSCQueue.h  WSServer.h
include/stereo_camera/vision/: DepthMap.h  DisparityMap.h  PointCloud.h
logs/: sc_final.out  sc_fresh.out  sc_test.out
scripts/: start.sh
scripts/stress_test/: config.py  requirements.txt  run_all.sh  stress_wss.py  stress_zmq.py
src/: main.cpp
src/api/: AdminServer.cpp  CameraSDKClient.cpp  ClientHandler.cpp
src/calibration/: Calibration2D.cpp  Calibration3D.cpp
src/common/: Logger.cpp  Parameter.cpp  Response.cpp
src/data/: ConfigManager.cpp  DataBuffer.cpp  DataPublisher.cpp  DataStorage.cpp  LoopbackSubscriber.cpp  SDKSlotManager.cpp  WSServer.cpp
src/vision/: DepthMap.cpp  DisparityMap.cpp  PointCloud.cpp
tests/: test_config_manager.cpp  test_data_buffer.cpp  test_parameter.cpp
